# vidsqueeze

./: .editorconfig  .envrc  .gitignore  .prettierrc.yaml  .vale.ini  Makefile  README.md  cspell.json  package.json  pyproject.toml
.cspell/: custom-dictionary.txt
.trunk/: trunk.yaml
.trunk/vale/styles/Google/: Exclamation.yml  GenderBias.yml  HeadingPunctuation.yml  Headings.yml  OptionalPlurals.yml  Units.yml  WordList.yml
dev/libs/sh/: exit_helpers.sh  print_helpers.sh  venv_helpers.sh
dev/shims/: vidsqueeze.sh
dev/utils/: find_xargs_run.sh
vidsqueeze/: _cli.py  _console.py  _debug.py  _ffmpeg.py  _pbar.py  _units.py  _validator.py  exceptions.py  runner.py
